# app/tag/domain/dto/user.dto.go
@@ -1,14 +1,0 @@
-package dto
-
-import (
-	"time"
-
-	"github.com/google/uuid"
-)
-
-type Tag struct {
-	Id        uuid.UUID `json:"id"`
-	Name      string    `json:"name"`
-	CreatedAt time.Time `json:"createdAt"`
-	UpdatedAt time.Time `json:"updatedAt"`
-}
