# cmd/executor/docs/swagger.yaml
@@ -1,71 +1,37 @@
 basePath: /api/v1
 definitions:
-  dto.CreatePollRequest:
+  dto.CreateTodoItemRequest:
     properties:
-      title:
+      description:
+        type: string
+      dueDate:
         type: string
     required:
-    - title
+    - description
+    - dueDate
     type: object
-  dto.CreateTagRequest:
-    properties:
-      email:
-        type: string
-    type: object
-  dto.CreateUserRequest:
-    properties:
-      email:
-        type: string
-    type: object
-  dto.Poll:
+  dto.TodoItem:
     properties:
       createdAt:
         type: string
-      id:
+      description:
         type: string
-      title:
+      dueDate:
+        type: string
+      id:
         type: string
       updatedAt:
         type: string
     type: object
-  dto.Tag:
+  dto.UpdateTodoItemRequest:
     properties:
-      createdAt:
+      description:
         type: string
-      id:
-        type: string
-      name:
-        type: string
-      updatedAt:
-        type: string
-    type: object
-  dto.UpdatePollRequest:
-    properties:
-      title:
+      dueDate:
         type: string
     required:
-    - title
-    type: object
-  dto.UpdateTagRequest:
-    properties:
-      email:
-        type: string
-    type: object
-  dto.UpdateUserRequest:
-    properties:
-      email:
-        type: string
-    type: object
-  dto.User:
-    properties:
-      createdAt:
-        type: string
-      email:
-        type: string
-      id:
-        type: string
-      updatedAt:
-        type: string
+    - description
+    - dueDate
     type: object
   response.ErrSwaggerResponse:
     properties:
@@ -107,11 +73,11 @@ definitions:
     type: object
 info:
   contact:
-    name: Hichapp
+    name: TodoAPP
     url: https://swagger.io/support
   termsOfService: http://swagger.io/terms/
 paths:
-  /polls:
+  /todo-items:
     post:
       consumes:
       - application/json
@@ -122,14 +88,14 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/dto.CreatePollRequest'
+          $ref: '#/definitions/dto.CreateTodoItemRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/dto.Poll'
+            $ref: '#/definitions/dto.TodoItem'
         "400":
           description: Bad Request
           schema:
@@ -152,16 +118,16 @@ paths:
             $ref: '#/definitions/response.ErrSwaggerResponse'
       security:
       - Bearer: []
-      summary: Create Poll
+      summary: Create TodoItem
       tags:
-      - polls
-  /polls/{id}:
+      - todo-items
+  /todo-items/{id}:
     delete:
       consumes:
       - application/json
       description: This api for delete poll
       parameters:
-      - description: Poll Id
+      - description: TodoItem Id
         in: path
         name: id
         required: true
@@ -193,15 +159,15 @@ paths:
             $ref: '#/definitions/response.ErrSwaggerResponse'
       security:
       - Bearer: []
-      summary: Delete Poll
+      summary: Delete TodoItem
       tags:
-      - polls
+      - todo-items
     get:
       consumes:
       - application/json
       description: This api for poll by id
       parameters:
-      - description: Poll Id
+      - description: TodoItem Id
         in: path
         name: id
         required: true
@@ -212,7 +178,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.Poll'
+            $ref: '#/definitions/dto.TodoItem'
         "400":
           description: Bad Request
           schema:
@@ -235,15 +201,15 @@ paths:
             $ref: '#/definitions/response.ErrSwaggerResponse'
       security:
       - Bearer: []
-      summary: Get Poll By Id
+      summary: Get TodoItem By Id
       tags:
-      - polls
+      - todo-items
     put:
       consumes:
       - application/json
       description: This api for update poll
       parameters:
-      - description: Poll Id
+      - description: TodoItem Id
         in: path
         name: id
         required: true
@@ -253,14 +219,14 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/dto.UpdatePollRequest'
+          $ref: '#/definitions/dto.UpdateTodoItemRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.Poll'
+            $ref: '#/definitions/dto.TodoItem'
         "400":
           description: Bad Request
           schema:
@@ -283,16 +249,16 @@ paths:
             $ref: '#/definitions/response.ErrSwaggerResponse'
       security:
       - Bearer: []
-      summary: Update Poll
+      summary: Update TodoItem
       tags:
-      - polls
-  /polls/purge/{id}:
+      - todo-items
+  /todo-items/purge/{id}:
     delete:
       consumes:
       - application/json
       description: This api for purge poll
       parameters:
-      - description: Poll Id
+      - description: TodoItem Id
         in: path
         name: id
         required: true
@@ -324,441 +290,9 @@ paths:
             $ref: '#/definitions/response.ErrSwaggerResponse'
       security:
       - Bearer: []
-      summary: Purge Poll
+      summary: Purge TodoItem
       tags:
-      - polls
-  /tags:
-    post:
-      consumes:
-      - application/json
-      description: This api for create tag
-      parameters:
-      - description: Contains information to set data
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/dto.CreateTagRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/dto.Tag'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrValidationSwaggerResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-      security:
-      - Bearer: []
-      summary: Create Tag
-      tags:
-      - tags
-  /tags/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: This api for delete tag
-      parameters:
-      - description: Tag Id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrValidationSwaggerResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-      security:
-      - Bearer: []
-      summary: Delete Tag
-      tags:
-      - tags
-    get:
-      consumes:
-      - application/json
-      description: This api for tag by id
-      parameters:
-      - description: Tag Id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.Tag'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrValidationSwaggerResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-      security:
-      - Bearer: []
-      summary: Get Tag By Id
-      tags:
-      - tags
-    put:
-      consumes:
-      - application/json
-      description: This api for update tag
-      parameters:
-      - description: Tag Id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Contains information to set data
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UpdateTagRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.Tag'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrValidationSwaggerResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-      security:
-      - Bearer: []
-      summary: Update Tag
-      tags:
-      - tags
-  /tags/purge/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: This api for purge tag
-      parameters:
-      - description: Tag Id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrValidationSwaggerResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-      security:
-      - Bearer: []
-      summary: Purge Tag
-      tags:
-      - tags
-  /users:
-    post:
-      consumes:
-      - application/json
-      description: This api for create vote
-      parameters:
-      - description: Contains information to set data
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/dto.CreateUserRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/dto.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrValidationSwaggerResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-      security:
-      - Bearer: []
-      summary: Create User
-      tags:
-      - users
-  /users/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: This api for delete vote
-      parameters:
-      - description: User Id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrValidationSwaggerResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-      security:
-      - Bearer: []
-      summary: Delete User
-      tags:
-      - users
-    get:
-      consumes:
-      - application/json
-      description: This api for vote by id
-      parameters:
-      - description: User Id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrValidationSwaggerResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-      security:
-      - Bearer: []
-      summary: Get User By Id
-      tags:
-      - users
-    put:
-      consumes:
-      - application/json
-      description: This api for update vote
-      parameters:
-      - description: User Id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Contains information to set data
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UpdateUserRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrValidationSwaggerResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-      security:
-      - Bearer: []
-      summary: Update User
-      tags:
-      - users
-  /users/purge/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: This api for purge vote
-      parameters:
-      - description: User Id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrValidationSwaggerResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrSwaggerResponse'
-      security:
-      - Bearer: []
-      summary: Purge User
-      tags:
-      - users
+      - todo-items
 securityDefinitions:
   Bearer:
     description: '"Type ''Bearer TOKEN'' to correctly set the Authorization Bearer"'
